--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,31 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Helvetica, sans-serif;
+}
+
+.game-container {
+  width: min(900px, 85vw);
+  height: 100vh;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tic-tac-toe {
+  height: 325px;
+  width: 325px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 0.25rem;
+  background-color: black;
+}
+
+.grid-cell {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4rem;
 }
