--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   font-family: Helvetica, sans-serif;
+  background-color: #38bdf8;
 }
 
 .game-container {
@@ -19,14 +20,25 @@
   width: 325px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   grid-gap: 0.25rem;
-  background-color: black;
+  background-color: white;
 }
 
 .grid-cell {
-  background-color: white;
+  background-color: #38bdf8;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 4rem;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+span {
+  visibility: hidden;
+}
+
+.grid-cell:hover span {
+  visibility: visible;
+  transition-delay: 50ms;
 }
