--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,10 @@
   justify-content: center;
   align-items: center;
   font-size: 4rem;
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 1);
 }
+
+/*
 
 span {
   visibility: hidden;
