--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,49 @@
   align-items: center;
   font-size: 4rem;
   color: rgba(255, 255, 255, 1);
+  cursor: pointer;
+}
+
+.overlay-text {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding-top: 15vh;
+  color: white;
+  z-index: 100;
+  background-color: transparent;
+}
+
+.overlay-text.visible {
+  display: flex;
+  animation: overlay-grow 500ms forwards;
+  flex-direction: column;
+  align-items: center;
+}
+
+.restart-button {
+  background-color: white;
+  color: #38bdf8;
+  border: none;
+  position: relative;
+  font-size: 0.3em;
+  padding: 0.2em 0.3em;
+  width: fit-content;
+}
+
+@keyframes overlay-grow {
+  from {
+    background-color: rgba(0, 0, 0, 0);
+    font-size: 0;
+    }
+
+  to {
+    background-color: rgba(255, 255, 255, 0.3);
+    font-size: 5em;
+  }
 }
 
 /*
