--- a/styles.css
+++ b/styles.css
@@ -44,25 +44,30 @@
   right: 0;
   padding-top: 15vh;
   color: white;
-  z-index: 100;
+  z-index: 50;
   background-color: transparent;
 }
 
 .overlay-text.visible {
   display: flex;
-  animation: overlay-grow 500ms forwards;
   flex-direction: column;
   align-items: center;
+  animation: overlay-grow 500ms forwards;
+}
+
+#win p {
+  background-color: transparent;
 }
 
 .restart-button {
   background-color: white;
   color: #38bdf8;
   border: none;
-  position: relative;
   font-size: 0.3em;
   padding: 0.2em 0.3em;
   width: fit-content;
+  z-index: 100;
+  cursor: pointer;
 }
 
 @keyframes overlay-grow {
