--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@
   cursor: pointer;
 }
 
-.overlay-text {
+.overlay {
   display: none;
   position: fixed;
   top: 0;
@@ -48,14 +48,14 @@
   background-color: transparent;
 }
 
-.overlay-text.visible {
+.overlay.visible {
   display: flex;
   flex-direction: column;
   align-items: center;
   animation: overlay-grow 500ms forwards;
 }
 
-#win p {
+#end-screen p {
   background-color: transparent;
 }
 
